단방향 암호화 Encode 유형 Enum 추가